--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 -- The name of the package.
-name:                haskell-blackjack
+name:                blackjack-simulator
 
 -- The package version.  See the Haskell package versioning policy (PVP) 
 -- for standards guiding when and how versions should be incremented.
@@ -29,7 +29,7 @@ author:              Thomas Jakway
 
 -- An email address to which users can send suggestions, bug reports, and 
 -- patches.
-maintainer:          tjakway@nyu.com
+maintainer:          tjakway@nyu.edu
 
 -- A copyright notice.
 -- copyright:           
