--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -64,4 +64,6 @@ executable haskell-blackjack
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
+
+  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
   
