--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -72,9 +72,9 @@ Test-Suite test-blackjack-simulator
     exitcode-stdio-1.0
 
   main-is:
-    test-main.hs
+    TestMain.hs
 
   hs-source-dirs:
-    test
+    src, test
 
-  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3
+  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3, HUnit, directory
