--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -77,4 +77,4 @@ Test-Suite test-blackjack-simulator
   hs-source-dirs:
     src, test
 
-  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3, HUnit, directory, HDBC-session
+  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3, HUnit, directory, HDBC-session, test-framework, test-framework-hunit
