--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -78,7 +78,7 @@ Test-Suite test-blackjack-simulator
 
   default-language:    Haskell2010
 
-  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3, HUnit, directory, HDBC-session, test-framework, test-framework-hunit, containers, convertible, MonadRandom 
+  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3, HUnit, directory, HDBC-session, test-framework, test-framework-hunit, containers, convertible, MonadRandom, blackjack-simulator
 
   if flag(postgresql)
     CPP-Options: -DBUILD_POSTGRESQL
