--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -22,7 +22,7 @@ Library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
-  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3, HDBC-session, containers, convertible
+  build-depends:       base, random, mtl, random-shuffle, HDBC, HDBC-sqlite3, HDBC-session, containers, convertible
   
   exposed-modules: Jakway.Blackjack.Match, Jakway.Blackjack.Util, Jakway.Blackjack.Interface.Options, Jakway.Blackjack.ProgMain, Jakway.Blackjack.Game, Jakway.Blackjack.Visibility, Jakway.Blackjack.AI, Jakway.Blackjack.CardOps, Jakway.Blackjack.IO.DatabaseCommon, Jakway.Blackjack.IO.TableNames, Jakway.Blackjack.IO.Action, Jakway.Blackjack.IO.DatabaseReads, Jakway.Blackjack.IO.RDBMS.SQLite, Jakway.Blackjack.IO.RDBMS.Postgres, Jakway.Blackjack.IO.DatabaseWrites, Jakway.Blackjack.IO.DatabaseConnection, Jakway.Blackjack.Cards, Jakway.Blackjack.Result, Jakway.Blackjack.Points, Jakway.Blackjack.Invariants.Checks, Jakway.Blackjack.Interface.Config
 
@@ -41,7 +41,7 @@ Executable invariants-checker
 
   ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
 
-  build-depends:       base >=4.8, blackjack-simulator
+  build-depends:       base, blackjack-simulator
 
   if flag(test)
     CPP-Options: -DTESTING
@@ -57,7 +57,7 @@ Executable blackjack-simulator
 
   ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
 
-  build-depends:       base >=4.8, blackjack-simulator
+  build-depends:       base, blackjack-simulator
 
   if flag(test)
     CPP-Options: -DTESTING
@@ -78,7 +78,7 @@ Test-Suite test-blackjack-simulator
 
   default-language:    Haskell2010
 
-  build-depends:       base >=4.8, random, mtl, random-shuffle, HDBC >= 2.0.0, HDBC-sqlite3, HUnit, directory, HDBC-session, test-framework, test-framework-hunit, containers, convertible, MonadRandom, blackjack-simulator
+  build-depends:       base, random, mtl, random-shuffle, HDBC, HDBC-sqlite3, HUnit, directory, HDBC-session, test-framework, test-framework-hunit, containers, convertible, MonadRandom, blackjack-simulator
 
   if flag(postgresql)
     CPP-Options: -DBUILD_POSTGRESQL
