--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -78,7 +78,7 @@ Executable fuzzy-checker
 
   ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
 
-  build-depends:       base, blackjack-simulator, statistics, vector
+  build-depends:       base, blackjack-simulator, statistics, vector, random
 
   if flag(buildfuzzychecker)
     buildable = True
