--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -26,7 +26,7 @@ Library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
-  build-depends:       base, random, mtl, random-shuffle, HDBC, HDBC-sqlite3, HDBC-session, containers, convertible
+  build-depends:       base, random, mtl, random-shuffle, HDBC, HDBC-sqlite3, HDBC-session, containers, convertible, hashable
   
   exposed-modules: Jakway.Blackjack.Match, Jakway.Blackjack.Util, Jakway.Blackjack.Interface.Options, Jakway.Blackjack.ProgMain, Jakway.Blackjack.Game, Jakway.Blackjack.Visibility, Jakway.Blackjack.AI, Jakway.Blackjack.CardOps, Jakway.Blackjack.IO.DatabaseCommon, Jakway.Blackjack.IO.TableNames, Jakway.Blackjack.IO.Action, Jakway.Blackjack.IO.DatabaseReads, Jakway.Blackjack.IO.RDBMS.SQLite, Jakway.Blackjack.IO.RDBMS.Postgres, Jakway.Blackjack.IO.DatabaseWrites, Jakway.Blackjack.IO.DatabaseConnection, Jakway.Blackjack.Cards, Jakway.Blackjack.Result, Jakway.Blackjack.Points, Jakway.Blackjack.Invariants.Checks, Jakway.Blackjack.Interface.Config
 
@@ -78,7 +78,7 @@ Executable fuzzy-checker
 
   ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
 
-  build-depends:       base, blackjack-simulator, statistics, vector, random
+  build-depends:       base, blackjack-simulator, statistics, vector, random, hashable
 
   if flag(buildfuzzychecker)
     buildable = True
