--- a/blackjack-simulator.cabal
+++ b/blackjack-simulator.cabal
@@ -97,7 +97,7 @@ Test-Suite test-blackjack-simulator
 
   default-language:    Haskell2010
 
-  build-depends:       base, random, mtl, random-shuffle, HDBC, HDBC-sqlite3, HUnit, directory, HDBC-session, test-framework, test-framework-hunit, containers, convertible, MonadRandom, blackjack-simulator
+  build-depends:       base, random, mtl, random-shuffle, HDBC, HDBC-sqlite3, HUnit, directory, HDBC-session, test-framework, test-framework-hunit, containers, convertible, MonadRandom, blackjack-simulator, hashable
 
   if flag(postgresql)
     CPP-Options: -DBUILD_POSTGRESQL
